[package]
name = "sp-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
]
